app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: default
spec:
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: demo2
  namespace: default
spec:
  selector:
    app: demo2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: error
  namespace: default
spec:
  selector:
    app: error
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 80
